--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ Default: 1
 
 -Primary color #e67e22
 -Tints  #fdf2e9
--Shades
+-Shades #cf711f
 -Accents
 -Grays 
 #555
@@ -143,4 +143,9 @@ body {
 .delivered-text {
   font-size: 1.8rem;
   font-weight: 600;
+}
+
+.delivered-text span {
+  color: #e67e22;
+  font-weight: 700;
 }
