--- a/css/style.css
+++ b/css/style.css
@@ -45,19 +45,8 @@ body {
   font-weight: 200;
   color: #555;
 }
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-}
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  gap: 9.6rem;
-}
 
+/* GENERAL COMPONENTS */
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -65,16 +54,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-
-.hero-img {
-  width: 100%;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.1;
-  margin-bottom: 4.8rem;
 }
 
 .btn:link,
@@ -116,6 +95,49 @@ body {
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+/* HEADER */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  /* For making sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2.2rem;
+}
+
+/* HERO SECTION */
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+  padding: 0 3.2rem;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.1;
+  margin-bottom: 4.8rem;
 }
 
 .delivered-meals {
