--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ Default: 1
 
 ----------    05 SHADOWS
 ----------    06 BORDER-RADIUS
+Default: 9px
 ----------    07 WHITESPACE
 
 */
@@ -60,8 +61,8 @@ body {
 .btn:visited {
   text-decoration: none;
   font-size: 2rem;
-  padding: 1.6rem 3.2rem;
   display: inline-block;
+  padding: 1.6rem 3.2rem;
   border-radius: 9px;
   /* Put transition on original state; */
   transition: all 0.3s;
@@ -112,6 +113,42 @@ body {
 
 .logo {
   height: 2.2rem;
+}
+
+/* NAVIGATION */
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  gap: 3.2rem;
+  align-items: center;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  color: #fff;
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
 }
 
 /* HERO SECTION */
