set up reusable grid

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,28 @@ body {
   color: #555;
 }
 
+/*GENERAL REUSABLE GRID*/
+
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  /* auto gives same margin to left and right. it will figure out automatically */
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 /* GENERAL COMPONENTS */
 .heading-primary {
   font-size: 5.2rem;
@@ -207,42 +229,4 @@ body {
 .delivered-text span {
   color: #e67e22;
   font-weight: 700;
-}
-
-/* HOW IT WORKS */
-
-.section-how {
-  padding: 9.6rem 0;
-  background-color: orangered;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.section-how div {
-  padding: 100px;
-  font-size: 50px;
-}
-
-.section-how div:nth-child(1) {
-  background-color: aqua;
-}
-.section-how div:nth-child(2) {
-  background-color: blue;
-}
-.section-how div:nth-child(3) {
-  background-color: violet;
-}
-.section-how div:nth-child(4) {
-  background-color: yellow;
 }
