--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,38 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.section-how {
+  padding: 9.6rem 0;
+}
+
 /* GENERAL COMPONENTS */
+.heading-primary,
+.heading-secondary {
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  color: #333;
+}
+
 .heading-primary {
   font-size: 5.2rem;
-  font-weight: 700;
   line-height: 1.1;
-  color: #333;
-  letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.subheading {
+  display: block;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.8px;
 }
 
 .btn:link,
@@ -229,4 +253,8 @@ body {
 .delivered-text span {
   color: #e67e22;
   font-weight: 700;
+}
+
+.step-img {
+  width: 50%;
 }
