--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,3 @@
-/* -------------- 01 TYPOGRAPHY SYSTEM
-
--FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-
--Line heights
-Default: 1 
-
--SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-----------    02 COLORS
-
--Primary color #e67e22
--Tints  #fdf2e9
--Shades #cf711f
--Accents
--Grays 
-#555
-#333
-
-
-----------    05 SHADOWS
-----------    06 BORDER-RADIUS
-Default: 9px
-----------    07 WHITESPACE
-
-*/
-
-/* Global reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  /* Percentage of user browser`s font-size 10/16*100*/
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 200;
-  color: #555;
-}
-
-/*GENERAL REUSABLE GRID*/
-
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-  /* auto gives same margin to left and right. it will figure out automatically */
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.section-how {
-  padding: 9.6rem 0;
-}
-
-/* GENERAL COMPONENTS */
-.heading-primary,
-.heading-secondary {
-  font-weight: 700;
-  letter-spacing: -0.5px;
-  color: #333;
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  line-height: 1.1;
-  margin-bottom: 3.2rem;
-}
-
-.heading-secondary {
-  font-size: 4.4rem;
-  line-height: 1.2;
-  margin-bottom: 9.6rem;
-}
-
-.subheading {
-  display: block;
-  font-size: 1.4rem;
-  font-weight: 500;
-  color: #cf711f;
-  text-transform: uppercase;
-  margin-bottom: 1.6rem;
-  letter-spacing: 0.8px;
-}
-
-.btn:link,
-.btn:visited {
-  text-decoration: none;
-  font-size: 2rem;
-  display: inline-block;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  /* Put transition on original state; */
-  transition: all 0.3s;
-  font-weight: 600;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-
-  /* Trick to add border inside */
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /* HEADER */
 
 .header {
@@ -255,6 +109,24 @@ body {
   font-weight: 700;
 }
 
+/*HOW IT WORKS SECTION*/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
 .step-img {
   width: 50%;
+}
+
+.step-description {
+  font-size: 2rem;
+  line-height: 1.8;
 }
