--- a/css/general.css
+++ b/css/general.css
@@ -58,7 +58,8 @@ body {
 
 .grid {
   display: grid;
-  gap: 9.6rem;
+  row-gap: 9.6rem;
+  column-gap: 6.4rem;
   grid-template-columns: repeat(2, 1fr);
 }
 
@@ -69,6 +70,9 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.grid--center-v {
+  align-items: center;
+}
 /* GENERAL COMPONENTS */
 .heading-primary,
 .heading-secondary,
@@ -91,7 +95,7 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 3.6rem;
+  font-size: 3rem;
   line-height: 1.2;
   margin-bottom: 3.2rem;
 }
