--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,34 @@
   margin-bottom: 1.2rem;
 }
 
-.step-img {
-  width: 50%;
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
 
-.step-description {
-  font-size: 2rem;
-  line-height: 1.8;
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.step-img-box::before {
+  content: "";
+  display: block;
+  width: 60%;
+  border-radius: 50%;
+  /* height: 60%; */
+  /*60% of the parent width*/
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
 }
