--- a/css/style.css
+++ b/css/style.css
@@ -134,22 +134,31 @@
   position: relative;
 }
 
+.step-img-box::after,
 .step-img-box::before {
   content: "";
   display: block;
-  width: 60%;
   border-radius: 50%;
-  /* height: 60%; */
-  /*60% of the parent width*/
-  padding-bottom: 60%;
-  background-color: #fdf2e9;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.step-img-box::before {
   z-index: -1;
+  width: 60%;
+  /* height: 60%; */
+  /*60% of the parent width*/
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
 }
 
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -2;
+}
 .step-img {
   width: 35%;
 }
