--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@
   width: 45%;
   padding-bottom: 45%;
   background-color: #fae5d3;
-  z-index: -2;
+  z-index: -1;
 }
 .step-img {
   width: 35%;
@@ -194,10 +194,36 @@
   padding: 9.6rem 0;
 }
 
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  overflow: hidden;
+}
+
+.meal-tags {
+  margin-bottom: 2rem;
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  background-color: #51cf66;
+  color: #333;
+  border-radius: 100px;
+  font-weight: 600;
+}
+
 .meal-title {
   font-size: 2.4rem;
   color: #333;
   font-weight: 600;
+  margin-bottom: 3.2rem;
 }
 
 .meal-attributes {
@@ -209,8 +235,17 @@
 
 .meal-attribute {
   font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
 }
 
 .meal-img {
   width: 100%;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
 }
