--- a/css/general.css
+++ b/css/general.css
@@ -63,6 +63,11 @@ body {
   row-gap: 9.6rem;
   column-gap: 6.4rem;
   grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 9.6rem;
+}
+
+.grid:last-child {
+  margin-bottom: 0;
 }
 
 .grid--2-cols {
