--- a/css/general.css
+++ b/css/general.css
@@ -24,6 +24,8 @@ Default: 1
 
 
 ----------    05 SHADOWS
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
 ----------    06 BORDER-RADIUS
 Default: 9px
 ----------    07 WHITESPACE
