--- a/css/style.css
+++ b/css/style.css
@@ -446,3 +446,14 @@
   /*temp height*/
   height: 50rem;
 }
+
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
