--- a/css/style.css
+++ b/css/style.css
@@ -448,6 +448,20 @@
   overflow: hidden;
 }
 
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #45260a;
+}
+
+.cta .heading-secondary {
+  color: #45260a;
+  margin-bottom: 3.2rem;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
 .cta-img-box {
   background-image: linear-gradient(
       to right bottom,
