--- a/css/general.css
+++ b/css/general.css
@@ -13,9 +13,11 @@ Default: 1
 ----------    02 COLORS
 
 -Primary color #e67e22
+
 -Tints  #fdf2e9
 #fae5d3
 -Shades #cf711f
+#45260a
 -Accents
 -Grays 
 #555
@@ -123,6 +125,7 @@ body {
   letter-spacing: 0.8px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   text-decoration: none;
@@ -133,6 +136,11 @@ body {
   /* Put transition on original state; */
   transition: all 0.3s;
   font-weight: 600;
+
+  /*Only for btn itself*/
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--full:link,
@@ -158,6 +166,21 @@ body {
 
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-items: end;
+  padding: 1.2rem;
+  margin-top: 2.6rem;
+  margin-left: 6.4rem;
+}
+
+.btn--form:hover,
+.btn--full:active {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
