--- a/css/general.css
+++ b/css/general.css
@@ -44,6 +44,7 @@ Default: 9px
 html {
   /* Percentage of user browser`s font-size 10/16*100*/
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -51,6 +52,7 @@ body {
   line-height: 1;
   font-weight: 200;
   color: #555;
+  overflow-x: hidden;
 }
 
 /*GENERAL REUSABLE GRID*/
